# EditorCursor

./: CMakeLists.txt  README.md  mod.json
.cursor/rules/: git-and-build-sync.mdc
.github/workflows/: release.yml
docs/: API.md  DEV-SHARING.md  HANDOFF.md
src/: ActionRegistry.hpp  Response.hpp  WsServer.cpp  WsServer.hpp  main.cpp
src/actions/: CreateObject.hpp  EditorContext.hpp  MoveSelected.hpp  QueryLevel.hpp  RequestFields.hpp  SelectObjects.hpp
